# CourseWork

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/doc/: Kursovaya_rabota.docx  Отчет.docx
src/ml_handlers/: get_azimuth.py  load_data.py  mape.py  mdape.py  print_metrics.py  processing.py
