[tool.poetry]
name = "coursework"
version = "0.1.0"
description = ""
authors = ["sa1vador77 <uncrowned.blessed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
geopy = "^2.4.1"
matplotlib = "^3.9.0"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
